# pythonweb-12

./: .env.example  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 40c83d640fb3_create_initial_tables.py  5e9c062c3940_add_role_to_user_model.py  7a0b9286105d_add_user_model_and_link_to_contacts.py  a4d43badfc33_add_created_at_and_updated_at.py  f2b823dbb5ba_add_verified_field_to_user.py
docs/: conf.py  index.rst
src/api/: __init__.py  auth_router.py  contact_router.py  user_router.py  util_router.py
src/conf/: config.py
src/database/: db.py
src/database/models/: __init__.py  base_model.py  contact_model.py  user_model.py
src/enums/: roles.py
src/repository/: __init__.py  contact_repository.py  user_repository.py
src/schemas/: __init__.py  contact_schema.py  token_schema.py  user_schema.py
src/services/: __init__.py  auth_service.py  contact_service.py  dependencies.py  email_service.py  limiter.py  upload_file.py  user_service.py
src/services/templates/: password_reset.html  verify_email.html
tests/: conftest.py
tests/integration/api/: test_auth_router.py  test_contact_router.py  test_user_router.py
tests/integration/repository/: test_contact_repository.py  test_user_repository.py
tests/unit/services/: test_auth_service.py  test_contact_service.py  test_user_service.py
